--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
 
 {% block main %}
-<div>
-    <div id="wrapper-main">
-        <h1 class="gradient-text text-xl"> Welcome to the <br> Sydney Train Game  </h1>
-        <p id="page-text"> Whenever catching trains in Sydney Australia, <br> it is customary to make 10 with all the individual carriage numbers. Get Started! </p>
-    </div> 
-</div>
+<div id="wrapper-main">
+    <h1 class="gradient-text text-xl" > Welcome to the <br> Sydney Train Game  </h1>
+    <p id="page-text"> Whenever catching trains in Sydney Australia, <br> it is customary to make 10 with all the individual carriage numbers. Get Started! </p>
+    <form name="home_page_daily_link" action="/daily" style="margin: auto; text-align: center;">
+        <button type="submit" class="btn btn-dark btn-secondary btn-lg" style="margin-top: 20px; margin-left: auto; margin-right: auto;" method="GET"> Daily Challenge </button>
+    </form>
+</div> 
+
 {% endblock %}
